structural-typing/tests/ui/type_mismatch_assignment.stderr
error[E0308]: mismatched types
  --> tests/ui/type_mismatch_assignment.rs:10:52
   |
10 |     let user_without_name: User<user::AllAbsent> = user_with_name;
   |                            ---------------------   ^^^^^^^^^^^^^^ expected `User`, found `User<FieldSet<Present>>`
   |                            |
   |                            expected due to this
   |
   = note: expected struct `User<FieldSet<Absent>>`
              found struct `User<FieldSet<Present>>`
